<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sxy"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b500acc1"
        android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:visibility="invisible"
            android:indeterminate="true"
            android:id="@+id/loginprogbar"
            />

    <ImageView
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/icion"
        android:id="@+id/logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photoblog"
        android:textSize="45sp"
        android:id="@+id/slo"
        android:textColor="#000000"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:enabled="true"
        />
    <EditText
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/slo"
        android:id="@+id/emailsin"
        android:background="@drawable/btn"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:hint="@string/enter_email"
        android:layout_marginEnd="50dp"
        android:padding="8dp"
        android:layout_marginStart="50dp"
        android:textColorHint="#80ffffff"
        android:autofillHints=""
        android:inputType="textEmailAddress" />
    <EditText
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn"
        android:layout_below="@id/emailsin"
        android:padding="8dp"
        android:id="@+id/passwordsin"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:hint="@string/enter_password"
        android:textColorHint="#80ffffff"
        android:autofillHints=""
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:inputType="textPassword" />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/signinbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordsin"
        android:background="@drawable/ddd"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:focusable="true"
        android:textColor="#80ffffff"
        android:elevation="4dp"
        android:shadowRadius="5"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textSize="19sp"
            android:id="@+id/arle"
            android:textColor="@color/fbutton_color_carrot"
            android:layout_above="@id/signupbtn"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:shadowColor="@android:color/holo_red_light"
            android:enabled="true"
            />
    <Button
        android:id="@+id/signupbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/e"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="#80ffffff"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        />

    </RelativeLayout>

</ScrollView>
</RelativeLayout>