<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/reg"
    tools:context=".RegisterActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b500acc1"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:visibility="invisible"
            android:indeterminate="true"
            android:id="@+id/regprogbar"
            />

        <ImageView
            android:layout_alignParentTop="true"
            android:layout_width="100dp"
            android:layout_alignParentStart="true"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon"
            android:id="@+id/logo"/>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:textSize="19sp"
            android:id="@+id/cre"
            android:layout_centerVertical="true"
            android:textColor="#d8000000"
            android:layout_toEndOf="@id/logo"
            android:shadowColor="@android:color/black"
            android:enabled="true"
            />
    </RelativeLayout>
        <EditText
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/rel"
            android:id="@+id/emailreg"
            android:background="@drawable/btn"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:hint="@string/enter_email"
            android:layout_marginEnd="50dp"
            android:padding="8dp"
            android:layout_marginStart="50dp"
            android:textColorHint="#80ffffff"
            android:autofillHints=""
            android:inputType="textEmailAddress" />
        <EditText
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn"
            android:layout_below="@id/emailreg"
            android:padding="8dp"
            android:id="@+id/passwordreg"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:hint="@string/enter_password"
            android:textColorHint="#80ffffff"
            android:autofillHints=""
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:inputType="textPassword" />
        <EditText
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn"
            android:layout_below="@id/passwordreg"
            android:padding="8dp"
            android:id="@+id/conpasswordreg"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:hint="@string/confirm_password"
            android:textColorHint="#80ffffff"
            android:autofillHints=""
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:inputType="textPassword" />
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/signupbtnreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/conpasswordreg"
            android:background="@drawable/ddd"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:focusable="true"
            android:textColor="#80ffffff"
            android:elevation="4dp"
            android:shadowRadius="5"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            />
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textSize="19sp"
        android:id="@+id/arle"
        android:textColor="@color/fbutton_color_carrot"
        android:layout_above="@id/signinbtnreg"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:shadowColor="@android:color/holo_red_light"
        android:enabled="true"
        />

        <Button
            android:id="@+id/signinbtnreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/e"
            android:text="@string/sign_in_reg"
            android:textSize="20sp"
            android:textColor="#80ffffff"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            />

    </RelativeLayout>

</ScrollView>

</RelativeLayout>